<resources>
    <string name="app_name">FoodApp</string>
    <string name="food_app">Food App</string>
    <string name="signup">Đăng ký</string>
    <string name="login">Đăng nhập</string>
    <string name="welcome">Chào mừng đến với ứng dụng đặt đồ ăn</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Địa chỉ email</string>
    <string name="password">Mật khẩu</string>
    <string name="forgetPass">Quên mật khẩu?</string>
    <string name="or">OR</string>
    <string name="username">Tên người dùng</string>
    <string name="confirmpass">Nhập lại mật khẩu</string>
    <string name="empty_email">Không được để trống email</string>
    <string name="empty_name">Không được để trống tên người dùng</string>
    <string name="empty_phone_number">Không được để trống số điện thoại</string>
    <string name="valid_email">Hãy nhập đúng định dạng email</string>
    <string name="empty_pass">Không được để trống mật khẩu</string>
    <string name="length_pass">Mật khẩu có độ dài ít nhất 6 ký tự</string>
    <string name="confirm_pass">Vui lòng nhập lại đúng mật khẩu</string>
    <string name="hello">Xin chào</string>
    <string name="menu">Thực đơn</string>
    <string name="search">Tìm kiếm ...</string>
    <string name="de_xuat_mon_an">Đề xuất cho bạn</string>
    <string name="view_all">Xem tất cả</string>
    <string name="choose_category">Chọn danh mục</string>
    <string name="food_name">Food Name</string>
    <string name="price">35.000đ</string>
    <string name="plus">+</string>
    <string name="name">name</string>
    <string name="rememberUser">Nhớ mật khẩu</string>
    <string name="quantity">Số lượng: 2</string>
    <string name="describe">Mô tả</string>
    <string name="describeFood">Mô tả, giới thiệu về đồ ăn</string>
    <string name="number">0</string>
    <string name="addCart">Thêm vào giỏ hàng</string>
    <string name="intoMoney">Thành tiền:</string>
    <string name="rating">5.0 đánh giá</string>
    <string name="cart">Giỏ hàng</string>
    <string name="order">Đặt đơn hàng</string>
    <string name="totalPrice">Tổng tiền:</string>
    <string name="home">Trang chủ</string>
    <string name="account">Tài khoản</string>
    <string name="myProfile">Thông tin của tôi</string>
    <string name="foodFavorite">Món ăn yêu thích</string>
    <string name="logout">Đăng xuất</string>
    <string name="savedLocation">Địa điểm đã lưu</string>
    <string name="payMethod">Phương thức thanh toán</string>
    <string name="edit_profile">Chỉnh sửa thông tin cá nhân</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="save_change">Lưu thay đổi</string>
    <string name="location_order">Địa chỉ nhận hàng</string>
    <string name="confirm_order">Xác nhận đặt đơn hàng</string>
    <string name="express_delivery">Giao hỏa tốc: 15000.0đ</string>
    <string name="fast_delivery">Giao hàng nhanh: 10000.0đ</string>
    <string name="choose_payment">Chọn hình thức thanh toán</string>
    <string name="cash">Tiền mặt</string>
    <string name="elecwallet">Momo, zalopay, ...</string>
    <string name="address_name">Tên địa chỉ</string>
    <string name="address">Đia chỉ</string>
    <string name="add_to_saved_location">Thêm vào địa điểm đã lưu</string>
    <string name="edit_saved_location">Chỉnh sửa địa điểm đã lưu</string>
    <string name="save">Lưu lại</string>
    <string name="enter_address">Nhập địa chỉ</string>
    <string name="select_address">Chọn địa chỉ</string>
    <string name="delete_item">Bạn có muốn xóa không?</string>
    <string name="yes">Có</string>
    <string name="no">Không</string>
    <string name="select_address_order">Chọn địa chỉ</string>
    <string name="save_address">Lưu địa chỉ này</string>
    <string name="choose_default">Chọn làm địa chỉ mặc định</string>
    <string name="order_success">Đặt hàng thành công</string>
    <string name="back_home">Trở về trang chủ</string>
    <string name="list_food">Danh sách món ăn</string>
    <string name="add_food">Thêm món ăn</string>
    <string name="btn_add_food">Thêm món ăn</string>
    <string name="best_food">Đề xuất món ăn</string>
    <string name="select_image">Chọn ảnh</string>
    <string name="edit_food">Chỉnh sửa món ăn</string>
    <string name="saved">Lưu lại</string>
    <string name="purchaseOrder">Đơn đặt hàng</string>
    <string name="delete">Xóa</string>
    <string name="confirm">xác nhận</string>
    <string name="cancel_order">Hủy đơn hàng</string>
    <string name="time">15 phút</string>
    <string name="rating_number">5.0</string>
    <string name="empty_confirm_pass">Không được để trống nhập lại mật khẩu</string>
    <string name="isEmpty">Không được để trống!</string>
    <string name="email_exist">Địa chỉ email đã tồn tại</string>
</resources>